--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ ul {
 
 .my_msg {
     padding: 13px;
-    width: 400px;
+    width: 350px;
     border-radius: 15px;
     margin: 10px;
 }
@@ -78,9 +78,11 @@ ul {
     background-color: rgb(219, 208, 208);
 }
 
-.chat_input_bg {
+.chat_input {
     background-color: lavender;
     height: 30px;
+
+    margin-top: 500px;
 }
 
 .my_input_padding {
